--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ a{color:inherit;text-decoration:none}
   /* ЧИПЫ — вертикальные, но ширина только по тексту */
 .hero-chips{
   display:flex;
-  flex-direction:column;     /* один под другим */
+  /* flex-direction:column;     один под другим */
   align-items:flex-start;    /* выравниваем слева и не растягиваем */
   gap:10px;
   margin-top:12px;
@@ -1724,13 +1724,13 @@ a{color:inherit;text-decoration:none}
 
     <p class="lead">
       Я — Евгения, практикующий психолог. Бережно соединяю транзактный анализ, EMDR
-      и семейный подход. В терапии мы шаг за шагом исследуем ваш внутренний мир,
+      и семейный подход. В терапии мы шаг за шагом исследуем  Ваш внутренний мир,
       находим ответы на важные вопросы и закрепляем изменения так, чтобы они стали
-      частью вашей жизни.
+      частью Вашей жизни.
     </p>
 
     <div class="quote">
-      Лучшее, что я могу для Вас сделать, — помочь вам обрести устойчивость и
+      Лучшее, что я могу для Вас сделать, — помочь Вам обрести устойчивость и
       опору внутри себя, которые не зависят от внешних обстоятельств.
     </div>
 
@@ -1789,7 +1789,7 @@ a{color:inherit;text-decoration:none}
             </div>
             <h3>Партнёрские отношения</h3>
           </div>
-          <p>Разводы/измены/кризисы, одиночество, созависимость. Учимся слышать себя, выстраивать границы, говорить без обвинений.</p>
+          <p>Развод, измена, кризисы в паре, чувство одиночества или созависимости. На сессиях учимся слышать себя, выстраивать границы и говорить без обвинений.</p>
           <a href="#booking" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
         </article>
 
@@ -1801,7 +1801,7 @@ a{color:inherit;text-decoration:none}
             </div>
             <h3>Детско‑родительские отношения</h3>
           </div>
-          <p>Границы «надо/могу/хочу», конфликты поколений. Больше ясности, меньше чувства вины.</p>
+          <p>Трудности в установлении границ «надо, могу, хочу», конфликты поколений и чувство вины. В терапии мы ищем больше ясности и доверия в отношениях.</p>
           <a href="#booking" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
         </article>
 
@@ -1813,7 +1813,7 @@ a{color:inherit;text-decoration:none}
             </div>
             <h3>Травматический опыт и психосоматика</h3>
           </div>
-          <p>Сложный детский опыт, потеря близких, насилие, аварии и другие события могут «застрять» и проявляться в теле через напряжение, тревогу, боль.</p>
+          <p>Сложные переживания прошлого — детский опыт, потеря близких, насилие, аварии и другие события — могут «застревать» внутри и проявляться в теле через напряжение, тревогу или боль.</p>
           <a href="#booking" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
         </article>
 
@@ -1828,7 +1828,7 @@ a{color:inherit;text-decoration:none}
             </div>
             <h3>Личностный кризис и выгорание</h3>
           </div>
-          <p>Апатия, тревога, хронический стресс, самооценка, самореализация. Стремление быть принятым и при этом сохранять свою уникальность.</p>
+          <p>Апатия, тревога, хронический стресс. Сложности с самооценкой и поиском самореализации. Желание быть принятым и при этом сохранить свою уникальность.</p>
           <a href="#booking" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
         </article>
 
@@ -2138,16 +2138,17 @@ a{color:inherit;text-decoration:none}
           <div class="edu-inner">
             <div class="edu-rail">
               <div class="edu-item">
-                <div class="ttl">Европейская программа (ТА)</div>
-                <div class="cap">Тренер Е. Ю. Лазаренко (CTA-P-EATA, PTSTA-P-EATA)</div>
+                <div class="ttl">Европейская программа</div>
+                <div class="cap">Психологического консультирования и психотерапии в модальности транзактный анализ, 4 года 
+Тренер EATA Е. Ю. Лазаренко (CTA-P-EATA, PTSTA-P-EATA)</div>
               </div>
               <div class="edu-item">
-                <div class="ttl">СПб институт EMDR</div>
-                <div class="cap">РФ/Европа/EMDR Institute</div>
+                <div class="ttl">Центр обучения EMDR в Санкт-Петербурге</div>
+                <div class="cap">Тренер — Малик Юлия</div>
               </div>
               <div class="edu-item">
-                <div class="ttl">Базовый курс КПТ</div>
-                <div class="cap">АКПП</div>
+                <div class="ttl">Институт по повышению квалификации и проф. переподготовки специалистов по доп. проф. программе</div>
+                <div class="cap">«Психологическое консультирование пар»</div>
               </div>
               <div class="edu-item">
                 <div class="ttl">Интегративное консультирование</div>
@@ -2157,6 +2158,14 @@ a{color:inherit;text-decoration:none}
               <div class="toggle-btn"><span>Скрыть</span></div>
               <div class="toggle-content">
                 <div class="edu-rail">
+                  <div class="toggle-item">
+                    <div class="toggle-title">Базовый курс КПТ</div>
+                    <div class="toggle-caption">АКПП</div>
+                  </div>
+                  <div class="toggle-item">
+                    <div class="toggle-title">Повышение квалификации</div>
+                    <div class="toggle-caption">«Особенности психологического консультирования в интегративном подходе»</div>
+                  </div>
                   <div class="toggle-item">
                     <div class="toggle-title">Семинар Ричарда Эрскина</div>
                     <div class="toggle-caption">«Нарциссическая дилемма»</div>
@@ -2172,6 +2181,10 @@ a{color:inherit;text-decoration:none}
                   <div class="toggle-item">
                     <div class="toggle-title">Семинар «Психотерапия Стыда»</div>
                     <div class="toggle-caption">2025 г.</div>
+                  </div>
+                  <div class="toggle-item">
+                    <div class="toggle-title">Регулярно посещаю личные и групповые супервизии от членов EATA и специалистов EMDR Ассоциации России</div>
+                    <!-- <div class="toggle-caption">2025 г.</div> -->
                   </div>
                 </div>
               </div>
@@ -2332,27 +2345,61 @@ a{color:inherit;text-decoration:none}
 
         <!-- 3 -->
         <article class="res-acc" aria-expanded="false">
-          <header class="res-head" role="button">
-            <div class="res-h">Тип привязанности и как он влияет на Ваши отношения</div>
-            <svg class="res-chev" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
-          </header>
-          <div class="res-body">
-            <div class="res-inner">
-              <ul class="res-list">
-                <li class="res-item"><div class="res-num">1</div><div class="res-text"><b>Основные типы привязанности.</b><br>Безопасная привязанность Вы чувствуете комфорт в близости, умеете доверять и не боитесь зависимости.</div></li>
-                <li class="res-item"><div class="res-num">2</div><div class="res-text"><b>Тревожная привязанность.</b><br>Вы сильно переживаете разлуку, боитесь быть покинутым и часто нуждаетесь в подтверждении любви.</div></li>
-                <li class="res-item"><div class="res-num">3</div><div class="res-text"><b>Избегающая привязанность.</b><br>Вы держите дистанцию, не любите выражать чувства и предпочитаете независимость.</div></li>
-                <li class="res-item"><div class="res-num">4</div><div class="res-text"><b>Тревожно-избегающий тип привязанности.</b><br>Сочетание тревожного и избегающего поведения — Вы можете то стремиться к близости, то отдаляться, часто испытывая внутренний конфликт.
-                Как это влияет на отношения:
-                - Определяет, как Вы реагируете на конфликты, выражаете потребности и строите доверие.
-                - Может быть причиной повторяющихся сценариев в отношениях.
-                - Осознание своего типа помогает выйти из замкнутых паттернов.</div></li>
-                <!-- <li class="res-item"><div class="res-num">5</div><div class="res-text"><b> </b><br> </div></li>
-                <li class="res-item"><div class="res-num">6</div><div class="res-text"><b> </b><br> </div></li> -->
-              </ul>
-            </div>
+  <header class="res-head" role="button">
+    <div class="res-h">Тип привязанности и как он влияет на Ваши отношения</div>
+    <svg class="res-chev" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="6 9 12 15 18 9"></polyline>
+    </svg>
+  </header>
+
+  <div class="res-body">
+    <div class="res-inner">
+
+      <!-- Описание перед списком -->
+      <p class="res-desc">
+        Тип привязанности формируется в раннем детстве и влияет на то, как Вы строите близость, доверяете и общаетесь во взрослой жизни.
+      </p>
+
+      <ul class="res-list">
+        <li class="res-item">
+          <div class="res-num">1</div>
+          <div class="res-text">
+            <b>Безопасный</b><br>
+            Вы чувствуете комфорт в близости, умеете доверять и не боитесь зависимости.
           </div>
-        </article>
+        </li>
+
+        <li class="res-item">
+          <div class="res-num">2</div>
+          <div class="res-text">
+            <b>Тревожный</b><br>
+            Вы сильно переживаете разлуку, боитесь быть покинутым и часто нуждаетесь в подтверждении любви.
+          </div>
+        </li>
+
+        <li class="res-item">
+          <div class="res-num">3</div>
+          <div class="res-text">
+            <b>Избегающий</b><br>
+            Вы держите дистанцию, не любите выражать чувства и предпочитаете независимость.
+          </div>
+        </li>
+
+        <li class="res-item">
+          <div class="res-num">4</div>
+          <div class="res-text">
+            <b>Тревожно-избегающий</b><br>
+            Сочетание тревожного и избегающего поведения — Вы можете то стремиться к близости, то отдаляться, часто испытывая внутренний конфликт.<br><br>
+            <i>Как это влияет на отношения:</i><br>
+            – Определяет, как Вы реагируете на конфликты, выражаете потребности и строите доверие.<br>
+            – Может быть причиной повторяющихся сценариев в отношениях.<br>
+            – Осознание своего типа помогает выйти из замкнутых паттернов.
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</article>
 
       </div>
     </div>
