--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ a{color:inherit;text-decoration:none}
   border-bottom:1px solid rgba(0,0,0,0.06);
   transition:all .25s ease;
 }
-.header-inner{ height:var(--header-h); display:flex; align-items:center; justify-content:space-between; padding: 16px; margin: 0 20px 0 20px; }
+.header-inner{ height:var(--header-h); display:flex; align-items:center; justify-content:space-between; padding: 16px; margin: 0 20px 0 20px; max-width: 1386px; margin: auto;}
 .brand{ font-weight:800; font-size:19px; letter-spacing:.1px; color:var(--accent-brown) }
 
-.nav{ display:flex; align-items:center; gap:28px; font-size:15px }
+.nav{ display:flex; align-items:center; gap:28px; font-size:16px; font-weight: 600;}
 .nav a{ opacity:.95; transition:opacity .15s ease }
 .nav a:hover{ opacity:1 }
 .header-cta{
@@ -151,7 +151,7 @@ a{color:inherit;text-decoration:none}
    ========================= */
 .hero{ padding:calc(var(--header-h) + 36px) 0 96px; background: linear-gradient(to bottom, #ffffff 0%, #d3ded7 100%); }
 .hero-grid{
-  display:flex;justify-content: space-between; grid-template-columns: 1.1fr 0.9fr; gap:48px; align-items:center; padding: 64px 16px 64px 16px; margin: 0 20px 0 20px;
+  display:flex;justify-content: space-between; grid-template-columns: 1.1fr 0.9fr; gap:48px; align-items:center; padding: 64px 16px 64px 16px; margin: 0 20px 0 20px; max-width: 1368px; margin: auto;
 }
 .hero-left{ min-width:0 }
 
