--- a/index.html
+++ b/index.html
@@ -203,52 +203,51 @@ a{color:inherit;text-decoration:none}
 
 /* ===== Мобильная адаптация (как на твоём скрине) ===== */
 @media (max-width: 920px){
-  .hero{ padding:calc(var(--header-h) + 18px) 0 110px }
-  .hero-grid{ grid-template-columns:1fr; gap:18px }
-  .hero-title{ font-size:38px; line-height:1.14; letter-spacing:-0.15px }
-  .hero-sub{ font-size:15.8px; margin-top:6px }
+    .hero-grid{ grid-template-columns:1fr; gap:18px }
+    .hero-title{ font-size:38px; line-height:1.14; letter-spacing:-0.15px }
+    .hero-sub{ font-size:15.8px; margin-top:6px }
 
-  .hero-photo{ display:none } /* убираем правое фото */
-  .hero-photo-1{
-    display:block;
-    background:#fff;
-    border-radius:20px;
-    overflow:hidden;
-    border:1px solid rgba(0,0,0,0.05);
-    box-shadow:0 12px 28px rgba(0,0,0,0.06);
+    .hero-photo{ display:none } /* убираем правое фото */
+    .hero-photo-1{
+      display:block;
+      background:#fff;
+      border-radius:20px;
+      overflow:hidden;
+      border:1px solid rgba(0,0,0,0.05);
+      box-shadow:0 12px 28px rgba(0,0,0,0.06);
+    }
+
+    /* кнопки — на всю ширину */
+    .hero-actions a{ width:100%; text-align:center }
+
+    /* ЧИПЫ — вертикальные, но ширина только по тексту */
+  .hero-chips{
+    display:flex;
+    /* flex-direction:column;     один под другим */
+    align-items:flex-start;    /* выравниваем слева и не растягиваем */
+    gap:10px;
+    margin-top:12px;
   }
 
-  /* кнопки — на всю ширину */
-  .hero-actions a{ width:100%; text-align:center }
+  .chip{
+    display:inline-flex;       /* ширина по содержимому */
+    align-items:center;
+    width:auto;                /* <-- главное: НЕ 100% */
+    max-width:100%;
+    padding:10px 14px;
+    border-radius:12px;
+    font-weight:700;
+    font-size:15px;
+    color:#2B2B2B;
 
-  /* ЧИПЫ — вертикальные, но ширина только по тексту */
-.hero-chips{
-  display:flex;
-  /* flex-direction:column;     один под другим */
-  align-items:flex-start;    /* выравниваем слева и не растягиваем */
-  gap:10px;
-  margin-top:12px;
-}
-
-.chip{
-  display:inline-flex;       /* ширина по содержимому */
-  align-items:center;
-  width:auto;                /* <-- главное: НЕ 100% */
-  max-width:100%;
-  padding:10px 14px;
-  border-radius:12px;
-  font-weight:700;
-  font-size:15px;
-  color:#2B2B2B;
-
-  /* стиль плашки */
-  background: rgba(143,113,86,0.10);
-  border:1px solid rgba(143,113,86,0.18);
-  box-shadow:
-    0 1px 0 rgba(255,255,255,0.6) inset,
-    0 4px 10px rgba(0,0,0,0.06);
-  backdrop-filter: blur(2px);
-}
+    /* стиль плашки */
+    background: rgba(143,113,86,0.10);
+    border:1px solid rgba(143,113,86,0.18);
+    box-shadow:
+      0 1px 0 rgba(255,255,255,0.6) inset,
+      0 4px 10px rgba(0,0,0,0.06);
+    backdrop-filter: blur(2px);
+  }
 }
 
 /* =========================
@@ -280,7 +279,7 @@ a{color:inherit;text-decoration:none}
   .header-cta{ display:none }
   .burger{ display:block }        /* бургер виден */
 
-  .hero{ padding:calc(var(--header-h) + 18px) 0 110px }
+  .hero{ padding:0}
   .hero-grid{ grid-template-columns:1fr; gap:18px; padding:32px var(--gutter) }
   .hero-title{ font-size:38px; line-height:1.14; letter-spacing:-0.15px }
   .hero-sub{ font-size:15.8px; margin-top:6px }
@@ -304,7 +303,6 @@ a{color:inherit;text-decoration:none}
   .hero-title{ font-size:34px }
   .fixed-booking-btn .fixed-div{ height:52px; font-size:15px }
 }
-
 
     /* =========================
    ABOUT — "Обо мне"
@@ -1549,6 +1547,11 @@ a{color:inherit;text-decoration:none}
   margin-bottom: 0px;
 }
 
+@media (max-width: 420px){
+  .chip {font-size: 11.5px;}
+  .hero{ padding: 0;}
+}
+
 .menu-brand {
   font-weight: 800;
   font-size: 19px;
@@ -2149,9 +2152,6 @@ a{color:inherit;text-decoration:none}
               <div class="edu-item">
                 <div class="ttl">Институт по повышению квалификации и проф. переподготовки специалистов по доп. проф. программе</div>
                 <div class="cap">«Психологическое консультирование пар»</div>
-              </div>
-              <div class="edu-item">
-                <div class="ttl">Интегративное консультирование</div>
               </div>
             </div>
              <div class="toggle-box" aria-expanded="true">
