--- a/index.html
+++ b/index.html
@@ -1767,7 +1767,7 @@ a{color:inherit;text-decoration:none}
           </svg>
         </div>
         <div class="h">Уважение к границам</div>
-        <div class="p">Работаем в комфортном для Вас теме и формате</div>
+        <div class="p">Работаем в комфортных для Вас формате и темпе.</div>
       </div>
     </div>
   </div>
@@ -2142,7 +2142,7 @@ a{color:inherit;text-decoration:none}
             <div class="edu-rail">
               <div class="edu-item">
                 <div class="ttl">Европейская программа</div>
-                <div class="cap">Психологического консультирования и психотерапии в модальности транзактный анализ, 4 года 
+                <div class="cap">Психологического консультирования и психотерапии в модальности транзактный анализ - 4 года. 
 Тренер EATA Е. Ю. Лазаренко (CTA-P-EATA, PTSTA-P-EATA)</div>
               </div>
               <div class="edu-item">
@@ -2263,7 +2263,7 @@ a{color:inherit;text-decoration:none}
         <div class="fact">
           <div class="fact-num">1</div>
           <div class="fact-text">
-            Я Родом из Краснодарского края.
+            Я родом из Краснодарского края.
             10 лет работала стоматологом, пока не поняла: мне ближе внутренний мир человека.
             Переезды в Москву и Петербург научили меня адаптации и гибкости.
             В терапии я вижу человека целиком: его чувства, мысли и телесные реакции.
@@ -2299,7 +2299,7 @@ a{color:inherit;text-decoration:none}
   <section class="resources" id="resources">
     <div class="container">
       <h2 class="title">Ресурсы для самопомощи</h2>
-      <p class="subtitle">Полезные материалы для поддержки вашего эмоционального благополучия</p>
+      <p class="subtitle">Полезные материалы для поддержки Вашего эмоционального благополучия</p>
 
       <div class="res-stack">
         
