--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@ a{color:inherit;text-decoration:none}
   .header-cta{ display:none }
   .burger{ display:block }        /* бургер виден */
 
-  .hero{ padding:0}
-  .hero-grid{ grid-template-columns:1fr; gap:18px; padding:32px var(--gutter) }
+  .hero{ padding:0;}
+  .hero-grid{ grid-template-columns:1fr; gap:18px; padding:32px var(--gutter);}
   .hero-title{ font-size:38px; line-height:1.14; letter-spacing:-0.15px }
   .hero-sub{ font-size:15.8px; margin-top:6px }
 
@@ -716,6 +716,7 @@ a{color:inherit;text-decoration:none}
     flex-direction: column;
     height: auto;
     gap: 32px;
+    margin-top: 45px;
   }
   .hero-title {
     order: 1;
